# learning-sycl

./: .clangd  .dockerignore  CMakeLists.txt  README.md  experiment.md  sycl.gaphor
.devcontainer/: Dockerfile  Tegra.dockerfile  devcontainer.json
cmake/: arm_toolchain.cmake  cmake-kits.json  sycl_toolchain.cmake  x64_toolchain.cmake
docker/: build.sh
scripts/: build_containers.sh  build_devcontainer.sh  build_runtime.sh
src/: aa.cc  common.hh  gemm.cc  gemm_cublas.cc  main.cc  n_body_sim.cc  onemath.cc  point3_diff.cc  primes.cc
src/n_body/: INBody.hh  NBodyCPU.cc  NBodyCPU.hh  NBodyGPU.cc  NBodyGPU.hh
